--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -13,7 +13,7 @@
     .logo {
       font-size: 20px;
       font-weight: bold;
-      color: #6439ff;
+      color: #BEEBE9;
     }
   }
 
@@ -50,7 +50,7 @@
 
         .icon {
           font-size: 18px;
-          color: #7451f8;
+          color: #BEEBE9;
         }
 
         span{
