--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,3 +1,31 @@
 .login{
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     
+    .login-form{
+        height: 15vh;
+        width: 15vw;
+        display:flex;
+        border-radius: 4%;
+        box-shadow: 0px 0px 3px 1px grey;
+    }
+
+    button{
+        margin: 0 auto;
+        position:relative;
+        top: 37%;
+        padding: 3px;
+
+        width: 90%;
+        height: 25%;
+        border:none;
+        background-color: #beebe9;
+        border-radius: 4%;
+        cursor: pointer;
+    }
+    button:hover{
+        box-shadow: 0px 0px 4px 1px #beebe9;
+    }
 }
