--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -9,9 +9,18 @@
         width: 15vw;
         display:flex;
         border-radius: 4%;
-        box-shadow: 0px 0px 3px 1px grey;
-    }
-
+        box-shadow: 0px 0px 3px 1px #ccc;
+        
+        .login-logo{
+            position:absolute;
+            border-radius: 50%;
+            box-shadow: 0px 0px 3px 1px #ea4335;
+            top: 50%;
+            left: 50%;
+            margin-top: -100px;
+            margin-left: -25px;
+        }
+    }    
     button{
         margin: 0 auto;
         position:relative;
