add points to lecturer

--- a/src/pages/new/new.scss
+++ b/src/pages/new/new.scss
@@ -64,8 +64,8 @@
             width: 150px;
             padding: 10px;
             border: none;
-            background-color: teal;
-            color: white;
+            background-color: #FFE3ED;
+            color: darkgrey;
             font-weight: bold;
             cursor: pointer;
             margin-top: 10px;
