--- a/src/pages/new/new.scss
+++ b/src/pages/new/new.scss
@@ -23,8 +23,9 @@
         text-align: center;
 
         img {
-          width: 100px;
-          height: 100px;
+          margin-top: 20%;
+          width: 40%;
+          //height: 100px;
           border-radius: 50%;
           object-fit: cover;
         }
@@ -32,15 +33,19 @@
 
       .right {
         flex: 2;
+        justify-content: center;
+        margin: 3%;
 
         form {
           display: flex;
           flex-wrap: wrap;
           gap: 30px;
-          justify-content: space-around;
+          justify-content: space-between;
+          padding: 10px;
+          //justify-items: flex-start;
 
           .formInput {
-            width: 40%;
+            width: 45%;
 
             label {
               display: flex;
@@ -56,7 +61,17 @@
               width: 100%;
               padding: 5px;
               border: none;
-              border-bottom: 1px solid gray;
+              border-bottom: 2px solid gray;
+              &:focus{
+                //transition: 1s ease-in-out;
+                border-color: #79d2b6;
+                outline: none;
+              }
+            }
+            
+            textarea {
+              width: 100%;
+              height: 200px;
             }
           }
 
@@ -68,7 +83,26 @@
             color: darkgrey;
             font-weight: bold;
             cursor: pointer;
+            margin: auto;
             margin-top: 10px;
+          }
+        }
+
+        button{
+          display:flex;
+          width: 30%;
+          padding: 10px;
+          border: none;
+          border-radius: 5px;
+          background-color: #79d2b6;
+          color: black;
+          font-weight: bold;
+          cursor: pointer;
+          margin: 10px auto 0;
+          justify-content: center;
+          &:hover{
+            transform: translateY(-2px);
+            box-shadow: 2px 5px 0px rgba(0, 0, 0, 1);
           }
         }
       }
