--- a/src/components/datatable/datatable.scss
+++ b/src/components/datatable/datatable.scss
@@ -124,8 +124,9 @@
     font-size: medium;
     font-weight: bold;
     cursor: pointer;
-    :hover {
-      box-shadow: 0px 0px 3px 3px darkgrey;
+    &:hover{
+      transform: translateY(-2px);
+      box-shadow: 2px 5px 0px rgba(0, 0, 0, 0.75);
     }
   }
 }
