--- a/src/components/datatable/datatable.scss
+++ b/src/components/datatable/datatable.scss
@@ -129,6 +129,12 @@
       box-shadow: 2px 5px 0px rgba(0, 0, 0, 0.75);
     }
   }
+
+  .loading{
+    width: fit-content;
+    color: lightgray;
+    margin: 30px auto 10px;
+  }
 }
 
 
